# malicous_code_testcases

./: README.md
NetPackat-1.0.4/NetPackat-1.0.4/: PKG-INFO  setup.py
adobe-acrobat-sign-9.9.1.tgz/package/: package.json
airbnb-datepickeroptions-2.0.0.tgz/package/: index.js  package.json
airtable-blocks-internal-8.0.0.tgz/package/: package.json
atc-pkg-1.0.2.tgz/package/: index.html  package.json
babel-loader-fs-1.0.0.tgz/package/: package.json
besec-1.0.0.tgz/package/: index.js  package.json
bitpay-push-notification-client-2.0.0.tgz/package/: index.js  package.json
c8test-0.0.1/c8test-0.0.1/: PKG-INFO  setup.py
c8tks94kspjyhtb-0.0.1/c8tks94kspjyhtb-0.0.1/: PKG-INFO  setup.py
cloud-pipeline-run-1.0.0.tgz/package/: index.js  package.json
com.unity.scripting.python-1.0.0.tgz/package/: index.js  package.json
commerce-utils-5.1.0.tgz/package/: index.js  package.json  preinstall.js
convera-9.0.0.tgz/package/: index.js  package.json
cube-sign-cli-0.1.0.tgz/package/: index.js  package.json
digitalexp-generic-action-executor-base-module-1.0.0.tgz/package/: index.js  package.json
glance-design-1.0.4.tgz/package/: package.json
hello_wordl-0.2.0/hello_wordl-0.2.0/: PKG-INFO  README.md  pyproject.toml  setup.py
hello_wordl-0.2.0/hello_wordl-0.2.0/src/hello_wordl/: __init__.py  __main__.py  hello.py
hello_wordl-0.2.0/hello_wordl-0.2.0/src/hello_wordl.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
hello_wordl-0.2.0/hello_wordl-0.2.0/tests/: test_hello.py
helmet_fastapi-1.2/helmet_fastapi-1.2/: PKG-INFO  pyproject.toml  token
helmet_fastapi-1.2/helmet_fastapi-1.2/src/helmet_fastapi/: __init__.py  main.py
qtpv-0.4.0/: PKG-INFO  setup.py
(+222 files in other folders)
